--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "titpak-insurance",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://kolade082.github.io/titpak-insurance",
+  "homepage": "https://www.titpackinsurancebrokers.com",
   "type": "module",
   "scripts": {
     "dev": "vite",
