ci: enable tracking of GitHub Actions workflows; add deploy workflow

--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,9 @@ firebase-debug.*.log
 .netlify
 
 # GitHub Pages
+# Note: track Actions workflows but ignore other .github metadata if desired.
+!.github/workflows/
+!.github/workflows/*
 .github/
 
 # Local SSL certificates
