--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,9 @@ jobs:
 
       - name: Deploy to GitHub Pages
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npm run deploy
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # configure a committer identity for the runner so gh-pages can push
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          npm run deploy
