--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,11 @@ build/
 .vite/
 
 # Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# .env
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
 # IDE and Editor files
 .vscode/
