--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+  "@mui/lab": "^7.0.0",
     "@mui/x-date-pickers": "^8.10.2",
     "date-fns": "^4.1.0",
     "react": "^19.1.1",
